Duplicated Main page and edited
Made a duplicate of index/main menu and worked on the layout. Will be our reference/template for most of our tabs.

Also tried messing around with the logo. Will make proper ones over the wekend.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --Mainclr: #7EAE96
+  --BGclr: #FFFFFF
+}
+
+
 .login-register {
   font-family: Arial, sans-serif;
   background-color: rgba(0, 0, 0, 0.849);
