--- a/css/index copy.css
+++ b/css/index copy.css
@@ -13,10 +13,10 @@
 
 .title-color {
   display: flex;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: var(--Mainclr);
-  box-shadow: 0px 4px 10px-4px #c1acba;
+  border-bottom: 3px solid darkslategray;
   margin: auto;
 }
 
@@ -44,6 +44,8 @@ body {
 
 .links {
   display: flex;
+  flex-direction: row;
+  justify-content: start;
 }
 
 .links h2 {
@@ -51,6 +53,7 @@ body {
   text-align: center;
   color: rgba(255, 255, 255, 0.647);
 }
+
 .box {
   width: 90%;             /* responsive */
   max-width: 1000px;      /* keeps it from being too wide */
@@ -59,6 +62,11 @@ body {
   box-shadow: 0 0 10px;
   border-radius: 5px;
   padding: 20px;
+}
+
+.box img {
+  width: 60px;
+  height: 60px;
 }
 
 
@@ -71,15 +79,16 @@ body {
 
 .links nav {
   background-color: var(--Subclr);
-  box-shadow: 0 0 10px;
   
-  width: 80%;               /* responsive width */
+  width: 20%;               /* responsive width */
   min-width: 150px;
   min-height: 200px;        /* limit width on large screens */
                             /* instead of hardcoded height */
   
   border-radius: 5px;
-  margin: 20px auto; 
+  border-right: 3px inset var(--Mainclr);
+  border-bottom: 3px inset var(--Mainclr);
+  margin-top: 20px;
   margin-left: 20px;        /* centers it horizontally */
   padding: 4px;
 
@@ -89,14 +98,16 @@ body {
 
 
 .table {
-  margin-top: 15px;
-  margin-left: 15em;
-  margin-right: 15px;
-  width: 80%;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 90%;
   height: 60%;
   min-width: 150px;
   min-height: 200px;
   background-color: var(--Subclr);
   border-radius: 5px;
   padding: 10px;
+  border-right: 3px inset var(--Mainclr);
+  border-bottom: 3px inset var(--Mainclr);
 }
