--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,7 +1,7 @@
 :root {
   --Mainclr: #364b46;
   --Subclr: #7EAE96;
-  --BGclr: #FFFFFF;
+  --BGclr: #EEEEEE;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
@@ -19,4 +19,41 @@
 
 a{
   text-decoration: none;
+}
+
+body{
+    background-color: white;
+}
+
+
+.title-color {
+  display: flex;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: var(--Mainclr);
+  border-bottom: 3px solid darkslategray;
+  margin: auto;
+}
+
+.title-color img{
+  margin-left: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 60px;
+  width: auto;
+  object-fit: contain;
+}
+
+#title {
+  margin-left: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: 32px;
+  font-weight: bold;
+  color:#FFFFFF;
+  font-family: Cambria;
+}
+
+body {
+  background-color: var(--BGclr);
 }
