--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
-:root {
-  --Mainclr: #7EAE96
-  --BGclr: #FFFFFF
-}
-
+/* Style is currently only used for login html*/
 
 .login-register {
   font-family: Arial, sans-serif;
-  background-color: rgba(0, 0, 0, 0.849);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 90vh;
 }
 
 .form-container {
-  background-color: rgb(94, 94, 93);
-  padding: 30px;
+  background-color: var(--Subclr);;
   border-radius: 35px;
   width: 300px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.418);
+  display:block;
+  padding: 30px;
+}
+
+.form-container > div{
+  width: 100%;
 }
 
 * {
@@ -38,6 +38,7 @@
 
 .after-form {
   text-align: center;
+  margin-top: 10px;
 }
 
 .after-form input {
@@ -47,23 +48,28 @@
 .dropme-input,
 .form-container select {
   width: 100%;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-bottom: 10px;
   border-radius: 10px;
   border: 1px solid #000000;
 }
 
-.form-container button {
-  width: 100%;
+.form-container #login-button {
+  width: 50%;
   padding: 10px;
   background-color: #007bff;
   border: none;
   color: rgb(94, 94, 93);
   border-radius: 5px;
   cursor: pointer;
+  color: white; 
+  font-size: 0.9em;
+  
+  margin-left: 25%;
 }
 
-.form-container button:hover {
+.form-container #login-button:hover {
   background-color: #0056b3;
 }
 
