--- a/css/main_style.css
+++ b/css/main_style.css
@@ -3,7 +3,15 @@
   --Subclr: #7EAE96;
   --BGclr: #EEEEEE;
   font-size: 16px;
-  font-family: "Roboto", sans-serif;
+}
+
+.noto-sans-mono-<uniquifier> {
+  font-family: "Noto Sans Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 @font-face {
