--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,8 @@
-.table h1{
+.table {
     align-content: center;
-    vertical-align: auto;
+    text-align: center;
+}
+
+h1 {
+    color: darkolivegreen;
 }
