--- a/css/index copy.css
+++ b/css/index copy.css
@@ -114,9 +114,7 @@
 
 
 .table {
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 20px;
   width: 90%;
   height: 60%;
   min-width: 150px;
