--- a/css/profile.css
+++ b/css/profile.css
@@ -69,7 +69,7 @@
     border: none;
     width: auto;
     height: 30px;
-    max-width: auto;ku
+    max-width: auto;
     background-size: 100% 100%;
 }
 
