--- a/css/box.css
+++ b/css/box.css
@@ -198,8 +198,8 @@
 
 .pfp p{
   font-size: 15px;
-  color: white;
-  text-shadow: 1px 1px darkgrey;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px rgb(0, 0, 0);
   margin-top:auto;
   align-self: flex-end;
   padding-top: 65px;
@@ -217,36 +217,30 @@
 }
 
 #PiiPoo{
-    background-image: url("../data/PiiPoo.png");
+    background-image: url("../data/default-pfp.png");
     background-size: 100% 100%;
-    border-radius: 10px;
-    border: 2px black solid;
+  
 }
 
 #abc456{
-    background-image: url("../data/abc456.png");
+    background-image: url("../data/default-pfp.png");
     background-size: 100% 100%;
-    border-radius: 10px;
-    border: 2px black solid;
+  
 }
 
 #xyz123{
-    background-image: url("../data/xyz123.png");
+    background-image: url("../data/default-pfp.png");
     background-size: 100% 100%;
-    border-radius: 10px;
-    border: 2px black solid;
+
 }
 
 #BirdUp{
-    background-image: url("../data/BirdUp.png");
+    background-image: url("../data/default-pfp.png");
     background-size: 100% 100%;
-    border-radius: 10px;
-    border: 2px black solid;
+   
 }
 
 #Someone{
-    background-image: url("../data/Someone.png");
+    background-image: url("../data/default-pfp.png");
     background-size: 100% 100%;
-    border-radius: 10px;
-    border: 2px black solid;
 }
