added all 5 hard coded guys in the search

--- a/css/box.css
+++ b/css/box.css
@@ -181,8 +181,7 @@
 }
 
 .pfp{
-  margin-top: 5%;
-  margin-right: 5%;
+  margin: auto;
   background-size: 100% 100%;
   width: 90px;
   border-radius:10px;
