changed back pictures

--- a/css/box.css
+++ b/css/box.css
@@ -216,30 +216,30 @@
 }
 
 #PiiPoo{
-    background-image: url("../data/default-pfp.png");
+    background-image: url("../data/PiiPoo.png");
     background-size: 100% 100%;
   
 }
 
 #abc456{
-    background-image: url("../data/default-pfp.png");
+    background-image: url("../data/abc456.png");
     background-size: 100% 100%;
   
 }
 
 #xyz123{
-    background-image: url("../data/default-pfp.png");
+    background-image: url("../data/xyz123.png");
     background-size: 100% 100%;
 
 }
 
 #BirdUp{
-    background-image: url("../data/default-pfp.png");
+    background-image: url("../data/BirdUp.png");
     background-size: 100% 100%;
    
 }
 
 #Someone{
-    background-image: url("../data/default-pfp.png");
+    background-image: url("../data/Someone.png");
     background-size: 100% 100%;
 }
